Formatação do Estilo da página

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <div class="search">
                 <label class="sr-only" for="input-search">Digite o Github username que quer favoritar</label>
                 <input id="input-search" type="text" placeholder="Digite o Github username que quer favoritar">
-                <button>&star;</button>
+                <button>
+                    <img class="star" src="./assets/imgs/star.svg" alt="Estrela">
+                </button>
             </div>
         </header>
         <table>
